<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startupscherm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.practicum_4.MainActivity"
    tools:ignore="MergeRootFrame" >

    <ImageView
        android:id="@+id/app_title"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="-20dp"
        android:src="@drawable/zgt_naam"
        android:contentDescription="@string/app_title" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="-70dp"
        android:src="@drawable/zgt_logo_groot"
        android:contentDescription="@string/app_logo" />


    <ImageView
        android:id="@+id/facebook_logo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/facebook_logo"
        android:contentDescription="@string/facebook_logo"/>

    <EditText
        android:id="@+id/facebook_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/facebook_text"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:background="#00000000"
        android:layout_gravity="bottom"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="45dp"
        android:inputType="none">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/youtube_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/youtube_text"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:background="#00000000"
        android:layout_gravity="bottom"
        android:layout_marginBottom="47dp"
        android:layout_marginLeft="45dp"
        android:inputType="none">
        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/youtube_logo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="45dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/youtube_logo"
        android:contentDescription="@string/youtube_logo"/>
</FrameLayout>

